# rust-micro-service

./: .env  docker-compose.yml  makefile
broker/: Cargo.toml  build.rs
broker/src/: client.rs  cnf.rs  container.rs  error.rs  http.rs  lib.rs
broker/src/application/: mod.rs
broker/src/application/dto/: order_dto.rs
broker/src/application/repository/: mod.rs  order.rs
broker/src/application/service/: mod.rs  order_service.rs
broker/src/domain/entity/: order.rs
broker/src/domain/value_object/: id.rs  mod.rs
broker/src/infra/order_repository/: mod.rs
broker/src/presentation/http/: handlers.rs  mod.rs
broker/src/presentation/http/dto/: mod.rs  order_dto.rs
order/: .gitignore  Cargo.toml  Dockerfile
order/src/: cnf.rs  container.rs  error.rs  grpc.rs  http.rs  lib.rs
order/src/application/service/: order_service.rs
order/src/domain/entity/: order.rs
order/src/domain/value_object/: address.rs  price.rs
order/src/infra/mongo/: mod.rs
order/src/infra/mongo/repository/: order.rs
order/src/presentation/grpc/: service.rs
order/src/presentation/http/: routes.rs
order/src/presentation/http/dto/: order_dto.rs
proto/: app.proto
