[package]
name = "broker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
async-trait = "0.1.58"
tonic = "0.11"
backtrace = "0.3.71"
thiserror = "1.0.59"
env_logger = { version = "0.11.3", default-feature = false }
prost = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.116"

[[bin]]
name = "http-server"
path = "src/http.rs"

[build-dependencies]
tonic-build = "0.11"
